# HM_requests

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/HM_requests/: Requests.py  __init__.py
tests/: test_import.py
