[tool.poetry]
name = "HM_requests"
version = "0.1.3"
description = "Protocol-agnostic request library that unifies HTTP, CoAP, MQTT and future transports under a single API."
authors = ["sato96 <samtozzi.st@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "HM_requests", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0.0"
aiocoap = "^0.4.0"
paho-mqtt = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
